# schizoproto

./: CHANGELOG.md  OUTLINE.md  OVERVIEW.md  README.md  __init__.py  pyproject.toml  requirements.txt  srctree.txt
TODO/: Apr15.md
config/: __init__.py
core/protocol/: handler.py
core/protocol/registration/: __init__.py
core/render/: engine.py
src/schizoproto/: __init__.py  logs.py
src/schizoproto/cli/: __init__.py
src/schizoproto/cli/commands/: __init__.py  uninstall.py
src/schizoproto/config/: __init__.py
src/schizoproto/core/: __init__.py
src/schizoproto/core/protocol/: __init__.py  globals.py  handler.py
src/schizoproto/core/protocol/registration/: common.py  methods.py
src/schizoproto/core/render/: __init__.py  base.py  engine.py  types.py
src/schizoproto/core/render/mutators/: __init__.py  dom.py  events.py  subs.py  text.py
src/schizoproto/core/render/targets/: __init__.py  dom.py  text.py
src/schizoproto/internals/: __init__.py  uninstall.py
