[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schizoproto"
version = "0.1.0"
description = "A parasitic transport protocol for drift-based systems, behavioral hauntings, and narrative trollage"
readme = "README.md"
authors = [
    {name = "Joel Yisrael", email = "schizoprada@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.28.0",
    "websockets>=10.3",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
]

[
project.optional-dependencies
]
dev = [
    "pytest>=7.0.0",
    "black>=22.6.0",
    "isort>=5.10.0",
    "mypy>=0.971",
    "flake8>=5.0.0",
]

browser = [
    "selenium>=4.3.0",
    "webdriver-manager>=3.8.0",
]

[
project.urls
]
"Homepage" = "https://github.com/schizoprada/schizoproto"
"Bug Tracker" = "https://github.com/schizoprada/schizoproto/issues"

[
project.scripts
]
schizoproto = "schizoproto.cli:main"

[
tool.hatch.build.targets.wheel
]
packages = ["src/schizoproto"]

[
tool.black
]
line-length = 88
target-version = ["py313"]

[
tool.isort
]
profile = "black"
line_length = 88

[
tool.mypy
]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[
tool.mypy.overrides
]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[
tool.pytest.ini_options
]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
